<resources>
    <string-array name="drawer_items">
        <item>Home</item>
        <item>Add Vehicle</item>
        <item>New Refuel</item>
        <item>New Cost</item>
        <item>View Costs</item>
        <item>Export</item>
    </string-array>

    <string-array name="fuel">
        <item>Gasoline</item>
        <item>LPG</item>
        <item>Natural Gas</item>
        <item>Petrol</item>
    </string-array>

    <string-array name="maintenance_type">
        <item>Extraordinary</item>
        <item>Ordinary</item>
        <item>Tax</item>
    </string-array>

    <string name="app_name">AUTO</string>

    <string name="title_activity_maintenance_insertion">New Cost</string>
    <string name="title_activity_vehicle_insertion">New Vehicle</string>
    <string name="title_activity_refuel_insertion">New Refuel</string>
    <string name="title_activity_export">ExportActivity</string>

    <string name="activity_maintenance_insertion_place">Here</string>
    <string name="activity_maintenance_insertion_today">Today</string>
    <string name="activity_maintenance_insertion_select_type">Select a Type</string>
    <string name="activity_maintenance_insertion_add_calendar">Add a Calendar Event</string>
    <string name="activity_maintenance_insertion_date">Date:</string>
    <string name="activity_maintenance_insertion_vehicle_missing">Vehicle not Selected.</string>
    <string name="activity_maintenance_insertion_name_missing">Name of cost missing.</string>
    <string name="activity_maintenance_insertion_amount_missing">Amount of cost missing.</string>
    <string name="activity_maintenance_insertion_maintenance_type_missing">Maintenance Type not Selected.</string>
    <string name="activity_maintenance_insertion_calendar_date_missing">Calendar date missing.</string>
    <string name="activity_maintenance_insertion_calendar_date_parse_error">Calendar date not in form dd/mm/yyyy.</string>
    <string name="activity_maintenance_insertion_maintenance_saved_success">Cost saved!</string>
    <string name="activity_maintenance_insertion_maintenance_saved_fail">Error saving cost.</string>
    <string name="activity_maintenance_insertion_place_hint">Mechanic Address</string> <!-- TO-DO: "mechanic" doesn't sound right :| -->
    <string name="activity_maintenance_insertion_name_hint">Name of cost</string>
    <string name="activity_maintenance_insertion_amount_hint">Amount paid</string>
    <string name="activity_maintenance_insertion_notes_hint">Notes</string>

    <string name="activity_vehicle_insertion_select_fuel">Select a Fuel Type</string>
    <string name="activity_vehicle_insertion_name_missing">Name of vehicle missing.</string>
    <string name="activity_vehicle_insertion_plate_missing">Plate of vehicle missing.</string>
    <string name="activity_vehicle_insertion_fuel_not_selected">Fuel not selected.</string>
    <string name="activity_vehicle_insertion_purchase_date_parse_error">Purchase date not in form dd/mm/yyyy.</string>
    <string name="activity_vehicle_insertion_vehicle_update_success">Vehicle update successfully!</string>
    <string name="activity_vehicle_insertion_vehicle_update_nothing_todo">Nothing to update…</string>
    <string name="activity_vehicle_insertion_vehicle_update_error">Vehicle update Error.</string>
    <string name="activity_vehicle_insertion_vehicle_save_success">Vehicle saved!</string>
    <string name="activity_vehicle_insertion_vehicle_save_fail">Error to save a Vehicle.</string>
    <string name="activity_vehicle_insertion_vehicle_name_hint">Name of Vehicle</string>
    <string name="activity_vehicle_insertion_vehicle_plate_hint">Plate</string>
    <string name="activity_vehicle_insertion_vehicle_purchase_date_hint">Date of purchase</string>

    <string name="activity_refuel_insertion_vehicle_not_selected">Vehicle not selected.</string>
    <string name="activity_refuel_insertion_vehicle_km_missing">Km of vehicle missing.</string>
    <string name="activity_refuel_insertion_refuel_amount_missing">Amount of Refuel missing.</string>
    <string name="activity_refuel_insertion_refuel_price_per_liter_missing">Price per Liter missing.</string>
    <string name="activity_refuel_insertion_refuel_data_missing">Refuel data missing.</string>
    <string name="activity_refuel_insertion_refuel_data_parse_error">Refuel data not in form dd/mm/yyyy.</string>
    <string name="activity_refuel_insertion_refuel_save_success">Refuel Saved.</string>
    <string name="activity_refuel_insertion_refuel_save_fail">Error to save Refuel.</string>
    <string name="activity_refuel_insertion_tts_text">State your last refuel</string>
    <string name="activity_refuel_insertion_tts_error">Speech to Text not supported on your Device.</string>
    <string name="activity_refuel_insertion_station_address_hint">Gas Station Address</string>
    <string name="activity_refuel_insertion_mileage_hint">Mileage</string>
    <string name="activity_refuel_insertion_refuel_amount_hint">Total spent</string>
    <string name="activity_refuel_insertion_price_per_liter_hint">Price per liter</string>
    <string name="activity_refuel_insertion_refuel_date_hint">Refuel date</string>
    <string name="activity_refuel_insertion_notes_hint">Notes</string>
    <string name="activity_refuel_insertion_tts_notrecognized">Speech not correctly recognized.</string>

    <string name="async_task_google_login_dialog_title">Google Login.</string>
    <string name="async_task_google_login_try_to_connect">Try to login with Google Account.</string>
    <string name="async_task_google_login_connecting">Connecting…</string>
    <string name="async_task_google_connection_success">Connected</string>
    <string name="async_task_google_connection_fail">Connection fail</string>

    <string name="content_descriptor_drawer_open">Open Drawer</string>
    <string name="content_descriptor_drawer_close">Close Drawer</string>
    <string name="content_descriptor_drawer_image">Drawer Image</string>
    <string name="content_descriptor_drawer_item_icon">Drawer Icon</string>
    <string name="content_descriptor_adapter_vehicle_inserted_icon">Vehicle Icon</string>
    <string name="content_descriptor_adapter_last_refuels_icon">Last Refuels Icon</string>
    <string name="content_descriptor_adapter_deadline_icon">Deadline Icon</string>
    <string name="content_descriptor_maintenance_insertion_vehicle_icon">Vehicle Icon</string>
    <string name="content_descriptor_maintenance_insertion_place_icon">Position Icon</string>
    <string name="content_descriptor_maintenance_insertion_name_icon">Text Icon</string>
    <string name="content_descriptor_maintenance_insertion_amount_icon">Amount Icon</string>
    <string name="content_descriptor_maintenance_insertion_notes_icon">Notes Icon</string>
    <string name="content_descriptor_maintenance_insertion_type_icon">Maintenance Type Icon</string>
    <string name="content_descriptor_maintenance_insertion_calendar_icon">Calendar Icon</string>
    <string name="content_descriptor_vehicle_insertion_name_icon">Name Icon</string>
    <string name="content_descriptor_vehicle_insertion_plate_icon">Plate Icon</string>
    <string name="content_descriptor_vehicle_insertion_fuel_icon">Fuel Icon</string>
    <string name="content_descriptor_vehicle_insertion_purchase_date_icon">Purchase Date Icon</string>

    <string name="frag_main_vehicle_inserted">VEHICLE INSERTED</string>
    <string name="frag_main_no_vehicle_inserted">No Vehicle Inserted</string>
    <string name="frag_main_last_refuel">LAST REFUEL</string>
    <string name="frag_main_deadlines">DEADLINES</string>
    <string name="frag_main_no_deadlines">No Deadlines</string>

    <string name="frag_view_costs_no_cost_associated">No costs associated to this Vehicle</string>
    <string name="frag_view_costs_no_vehicle_selected">Select a Vehicle</string>
    <string name="frag_view_costs_no_place">No Place</string>

    <string name="refuel_card_view_adapter_amount" formatted="false">%s  -  %s € at %s €/l</string>
    <string name="deadline_no_note">No notes</string>

    <string name="cost_card_view_adapter_delete_dialog_title">Deleting this Cost</string>
    <string name="dialog_message_are_you_sure">Are you sure ?</string>
    <string name="vehicle_card_view_adapter_delete_dialog_title">Deleting this Vehicle</string>
    <string name="vehicle_card_view_adapter_delete_dialog_message">
        Are you sure? Deleting a vehicle will delete all the associated costs.
    </string>
    <string name="dead_line_card_view_adapter_delete_dialog_title">Deleting this Deadline</string>

    <string name="menu_done">Done</string>
    <string name="menu_tts">Speech to Text</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
</resources>
