<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- spinner to select the associated vehicle -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white">
            <ImageView
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:background="@drawable/ic_car_48dp"
                android:contentDescription="vehicle icon"/>
            <Spinner
                android:id="@+id/refuel_insertion_vehicle_associated"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <!-- place insertion filed -->
        <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="45dp"
             android:layout_marginBottom="10dp">
             <ImageView
                 android:layout_width="36dp"
                 android:layout_height="36dp"
                 android:background="@drawable/ic_maps_place_48dp"
                 android:contentDescription="fucking place"/>
             <EditText
                 android:id="@+id/refuel_insertion_place_edit"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
                 android:inputType="text"
                 android:textColor="@color/black"
                 android:hint="@string/activity_refuel_insertion_station_address_hint"/>
             <Switch
                 android:id="@+id/refuel_insertion_switch_current_place"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="0"
                 android:layout_marginLeft="10dp"
                 android:layout_marginStart="10dp"
                 android:text="@string/activity_maintenance_insertion_place"
                 android:textColor="@color/black"/>
        </LinearLayout>

        <!-- km of vehicle -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="10dp">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/ic_mileage_48dp"
                android:contentDescription="fucking km"/>
            <EditText
                android:id="@+id/refuel_insertion_km"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:textColor="@color/black"
                android:hint="@string/activity_refuel_insertion_mileage_hint"/>
        </LinearLayout>

        <!-- amount and ppl -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="10dp">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/ic_editor_attach_money_48dp"
                android:contentDescription="fucking amount"/>
            <EditText
                android:id="@+id/refuel_insertion_amount"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="number|numberDecimal"
                android:textColor="@color/black"
                android:hint="@string/activity_refuel_insertion_refuel_amount_hint"/>
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/ic_maps_local_gas_station_48dp"
                android:contentDescription="fucking amount"/>
            <EditText
                android:id="@+id/refuel_insertion_ppl"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:textColor="@color/black"
                android:hint="@string/activity_refuel_insertion_price_per_liter_hint"/>
        </LinearLayout>

        <!-- add a calendar date -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/ic_calendar_event_48dp"
                android:contentDescription="refuel date"/>
            <EditText
                android:id="@+id/refuel_insertion_data_edit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:inputType="date"
                android:textColor="@color/black"
                android:hint="@string/activity_refuel_insertion_refuel_date_hint"/>
            <Switch
                 android:id="@+id/refuel_insertion_switch_current_date"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="0"
                 android:layout_marginLeft="10dp"
                 android:layout_marginStart="10dp"
                 android:text="@string/activity_maintenance_insertion_today"
                 android:textColor="@color/black"/>
        </LinearLayout>

        <!-- text field of notes-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/ic_note_add_48dp"
                android:contentDescription="fucking note"/>
            <EditText
                android:id="@+id/refuel_insertion_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="45dp"
                android:isScrollContainer="true"
                android:inputType="textMultiLine"
                android:textColor="@color/black"
                android:hint="@string/activity_refuel_insertion_notes_hint"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
