<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frag_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- content of frag main goes here -->
    <LinearLayout
        android:id="@+id/frag_main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:textStyle="bold"
                android:text="@string/frag_main_vehicle_inserted"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:textStyle="bold"
                android:text="@string/frag_main_last_refuel"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:textStyle="bold"
                android:text="@string/frag_main_deadlines"/>
        </RelativeLayout>
    </LinearLayout>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/btnFab"
        android:layout_alignRight="@id/frag_main_content"
        android:layout_alignEnd="@id/frag_main_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="false"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="25dp"
        fab:fab_addButtonColorNormal="@color/primary"
        fab:fab_addButtonColorPressed="@color/primary"
        fab:fab_addButtonPlusIconColor="@color/textColorWhite">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnAddRefuel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_icon="@drawable/ic_local_gas_station_black_24dp"
            fab:fab_size="mini"
            fab:fab_colorNormal="@color/white"
            fab:fab_colorPressed="@color/half_black" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnAddVehicle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_icon="@drawable/ic_local_gas_station_black_24dp"
            fab:fab_size="mini"
            fab:fab_colorNormal="@color/white"
            fab:fab_colorPressed="@color/half_black" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnAddCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_icon="@drawable/ic_local_gas_station_black_24dp"
            fab:fab_size="mini"
            fab:fab_colorNormal="@color/white"
            fab:fab_colorPressed="@color/half_black" />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>
</RelativeLayout>